2006-10-18  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/fields/box_db_table_definition.cc:
	* glom/mode_design/fields/box_db_table_definition.h: Added field_has_non_unique_values().
	change_definition(): If a field is being set to primary key, 
	use field_has_non_unique_values() to check and warn, to avoid an error from Postgres.
	Bug #362895.

2006-10-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/document/document_glom.cc:
	* glom/libglom/document/document_glom.h: Added forget_layout_record_viewed().
	* glom/mode_design/fields/box_db_table_definition.cc: change_definition(): When 
	changing whether a field is the primary key, use forget_layout_record_viewed() 
	so that we do not try to use an inappropriate key value with a different field.

2006-10-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/fields/box_db_table_definition.cc:
	* glom/mode_design/fields/box_db_table_definition.h: Added field_has_null_values().
	change_definition(): If a field is being set to primary key, 
	use field_has_null_values() to check and warn, to avoid an error from Postgres.
	Bug #362838.

1.1.7:

2006-10-13  Murray Cumming  <murrayc@murrayc.com>

	* docs/user-guide/C/glom.xml: Added the section on the use of the full pygda 
	API, from the wiki. We need to just publish the docbook to the web somehow 
	instead.

2006-10-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.cc: on_flowtable_script_button_clicked(): 
	Check whether the current record still exists after the script has run, 
	and signal that it was deleted if necessary.

2006-10-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/document/document_glom.cc: load_after_layout_group(): When 
	loading the portal navigation relationship, create the object before passing 
	it to load_after_layout_item_usesrelationship(). This should have crashed 
	before. Also, pass in the related table name, not the parent table name, 