@@ -1,5 +1,16 @@
 2006-10-18  Murray Cumming  <murrayc@murrayc.com>
 
+	* glom/mode_data/dialog_layout_list.cc:
+	* glom/mode_data/dialog_layout_list.h: Remove warn_about_images() 
+	and don't use it in on_button_add_field() and on_button_edit_field().
+	* glom/utility_widgets/imageglom.cc:
+	* glom/utility_widgets/imageglom.h: Make scale_keeping_ratio() public, 
+	so we can use it from elsewhere, and check for null pixbufs.
+	* glom/utility_widgets/db_adddel/db_adddel.cc: treeviewcolumn_on_cell_data(): 
+	Show pixbufs too, so that Image fields show up in the list view too.
+
+2006-10-18  Murray Cumming  <murrayc@murrayc.com>
+
 	* glom/mode_design/fields/box_db_table_definition.cc:
 	* glom/mode_design/fields/box_db_table_definition.h: Added field_has_non_unique_values().
 	change_definition(): If a field is being set to primary key, 
